integrate multiple platforms in web page V3
